# PEPT-Workbench

./: .gitignore  README.md  agents.md  pyproject.toml
pept_gui/: __init__.py  app.py  main_window.py
pept_gui/io/: __init__.py  detectors.py  time_mask.py  workspace.py
pept_gui/model/: __init__.py  pept_bridge.py  pipeline_graph.py  playback.py  run_controller.py  sample_analysis.py
pept_gui/view/: __init__.py  controls.py  diagnostics_view.py  graph_view.py  lors_view.py  node_editor.py  plotly_widget.py  traj2d_view.py  traj_view.py
tests/: test_controls.py  test_detectors.py  test_imports.py  test_main_helpers.py  test_pipeline_compile.py  test_sample_analysis.py  test_time_mask.py
